Implement BV remarks on lay summary

--- a/paper/abstract-en/extended-abstract.tex
+++ b/paper/abstract-en/extended-abstract.tex
@@ -16,11 +16,11 @@
 \begin{document}
 	\title{Optimising Continuous Integration using Test Case Prioritisation}
 	\author{Pieter De Clercq}
-	\supervisor{Prof. dr. B. Volckaert, Prof. dr. ir. F. De Turck, J. Vaneessen, D Kerkhove}
+	\supervisor{Prof. dr. B. Volckaert, Prof. dr. ir. F. De Turck, J. Vaneessen, D. Kerkhove}
 	\maketitle
 	
 	\begin{abstract}
-		This abstract is very abstract.
+		This abstract is extremely abstract.
 	\end{abstract}
 
 	\begin{keywords}
