--- a/paper/abstract-nl/extended-abstract.tex
+++ b/paper/abstract-nl/extended-abstract.tex
@@ -16,7 +16,7 @@
 \begin{document}
 	\title{Optimaliseren van Continue Integratie\\ door middel van Test Prioritering}
 	\author{Pieter De Clercq}
-	\supervisor{Prof. dr. B. Volckaert, Prof. dr. ir. F. De Turck, J. Vaneessen, D Kerkhove}
+	\supervisor{Prof. dr. B. Volckaert, Prof. dr. ir. F. De Turck, J. Vaneessen, D. Kerkhove}
 	\maketitle
 	
 	\begin{abstract}
