--- a/paper/summary/dutch.tex
+++ b/paper/summary/dutch.tex
@@ -1,5 +1,4 @@
 % !TeX root = ../thesis.tex
 
-\addcontentsline{toc}{chapter}{Summary (Dutch)}
 \chapter*{Samenvatting}
-Nederlandse samenvatting komt hier.
+TODO: vertaal vorige pagina naar Nederlands en voeg een stuk toe om te klagen hoe achterlijk alles klinkt in het Nederlands.
