--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -192,7 +192,7 @@
 \pagestyle{empty}
 %\includepdf[pages=-]{titlepage.pdf}
 
-\blankpage{}
+%\blankpage{}
 
 % Admission.
 %\input{admission.tex}
@@ -206,7 +206,7 @@
 %\input{summary/english.tex}
 \clearpage
 \selectlanguage{dutch}
-%\input{summary/dutch.tex}
+\input{summary/dutch.tex}
 \clearpage
 \selectlanguage{english}
 
@@ -216,15 +216,15 @@
 %\includepdf[pages=-]{abstract-nl/extended-abstract.pdf}
 
 % Lay summary.
-\input{summary/lay.tex}
+%\input{summary/lay.tex}
 \clearpage
 
 \pagestyle{fancy}
 
-\blankpage{}
+%\blankpage{}
 
 % ToC.
-\tableofcontents
+%\tableofcontents
 
 % Corpus.
 \mainmatter
