--- a/paper/related-work/algorithms/rocket.tex
+++ b/paper/related-work/algorithms/rocket.tex
@@ -53,7 +53,7 @@ The third and final algorithm is the ROCKET algorithm. This algorithm has been p
 	\begin{cases}
 		0.7 & \text{if } i = 1 \\
 		0.2 & \text{if } i = 2 \\
-		0.1 & \text{if } i >= 3 \\
+		0.1 & \text{if } i \ge 3 \\
 	\end{cases}
 	\right.
 \]
