--- a/paper/related-work/approaches/tcp.tex
+++ b/paper/related-work/approaches/tcp.tex
@@ -7,8 +7,8 @@ Both \acrshort{tsm} and \acrshort{tcs} attempt to execute as few tests as possib
 \label{def:tcp}
 \mbox{}\\Given:
 \begin{itemize}
-	\item $T$ the test suite
-	\item $PT$ the set of permutations of $T$
+	\item $T$ the test suite.
+	\item $PT$ the set of permutations of $T$.
 	\item $f: PT \mapsto \mathbb{R}$ a function from a subset to a real number, this function is used to compare sequences of test cases to find the optimal permutation.
 \end{itemize}
 
