--- a/paper/related-work/approaches/tcs.tex
+++ b/paper/related-work/approaches/tcs.tex
@@ -7,9 +7,9 @@ The second approach closely resembles the previous one. However, instead of perm
 \label{def:tcs}
 \mbox{}\\Given:
 \begin{itemize}
-	\item $P$ the previous version of the codebase
-	\item $P'$ the current (modified) version of the codebase
-	\item $T$ the test suite
+	\item $T$ the test suite.
+	\item $P$ the previous version of the codebase.
+	\item $P'$ the current (modified) version of the codebase.
 \end{itemize}
 
 \noindent \tcs{} aims to find a subset $T' \subseteq T$ that is used to test $P'$. 
