--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -190,20 +190,20 @@
 % Titlepage.
 \frontmatter
 \pagestyle{empty}
-%\includepdf[pages=-]{titlepage.pdf}
+\includepdf[pages=-]{titlepage.pdf}
 
-%\blankpage{}
+\blankpage{}
 
 % Admission.
-%\input{admission.tex}
+\input{admission.tex}
 \clearpage
 
 % Acknowledgements.
-%\input{acknowledgements.tex}
+\input{acknowledgements.tex}
 
 % Summaries.
 \selectlanguage{english}
-%\input{summary/english.tex}
+\input{summary/english.tex}
 \clearpage
 \selectlanguage{dutch}
 \input{summary/dutch.tex}
@@ -212,45 +212,45 @@
 
 % Extended abstracts.
 \addcontentsline{toc}{chapter}{Extended abstract}
-%\includepdf[pages=-]{abstract-en/extended-abstract.pdf}
-%\includepdf[pages=-]{abstract-nl/extended-abstract.pdf}
+\includepdf[pages=-]{abstract-en/extended-abstract.pdf}
+\includepdf[pages=-]{abstract-nl/extended-abstract.pdf}
 
 % Lay summary.
-%\input{summary/lay.tex}
+\input{summary/lay.tex}
 \clearpage
 
 \pagestyle{fancy}
 
-%\blankpage{}
+\blankpage{}
 
 % ToC.
-%\tableofcontents
+\tableofcontents
 
 % Corpus.
 \mainmatter
 
-%\input{glossary.tex}
+\input{glossary.tex}
 \clearpage
-%\input{introduction.tex}
+\input{introduction.tex}
 \clearpage
-%\input{software-engineering.tex}
+\input{software-engineering.tex}
 \clearpage
-%\input{related-work.tex}
+\input{related-work.tex}
 \clearpage
-%\input{velocity.tex}
+\input{velocity.tex}
 \clearpage
-%\input{evaluation.tex}
+\input{evaluation.tex}
 \clearpage
-%\input{conclusion.tex}
+\input{conclusion.tex}
 \clearpage
-%\input{bibliography.tex}
+\input{bibliography.tex}
 \clearpage
-%\input{list-of-figures.tex}
+\input{list-of-figures.tex}
 \clearpage
-%\input{list-of-tables.tex}
+\input{list-of-tables.tex}
 \clearpage
-%\input{list-of-listings.tex}
+\input{list-of-listings.tex}
 \clearpage
-%\input{appendices.tex}
+\input{appendices.tex}
 
 \end{document}
