Add dutch extended abstract

--- a/paper/abstract-en/extended-abstract.tex
+++ b/paper/abstract-en/extended-abstract.tex
@@ -18,7 +18,7 @@
 \usepackage{tabularx}
 \usepackage{tikz}
 \usepackage{tikzscale}
-\usepackage{hyperref}
+\usepackage[final]{hyperref}
 \usepackage{cleveref}
 
 % Table columns.
@@ -41,7 +41,7 @@
 	\maketitle
 	
 	\begin{abstract}
-	Ever since the introduction of traditional software development models in the previous century, the complexity and magnitude of today's software have vastly increased. This evolution has led to the introduction of agile software development approaches, which pose the need for frequent builds and automated testing. Eventually, this increase in size will also negatively affect the size of the testing suites, resulting in severe scalability issues. This thesis proposes a framework and a novel algorithm for test suite optimisation by prioritising test cases which are likely to fail. The performance has been evaluated on two existing applications, and the results are auspicious.
+	Ever since the introduction of traditional software development models in the previous century, the complexity and magnitude of today's software have vastly increased. This evolution has led to the adoption of Agile software development approaches, which pose the need for frequent integration and automated testing. Eventually, this increase in size will also negatively affect the size of the testing suites, resulting in severe scalability issues. This thesis proposes a framework and a novel algorithm for test suite optimisation by prioritising test cases which are likely to fail. The performance has been evaluated on two existing applications, and the results are auspicious.
 	\end{abstract}
 
 	\begin{keywords}
