--- a/paper/software-engineering/agile-software-development/agile-manifesto.tex
+++ b/paper/software-engineering/agile-software-development/agile-manifesto.tex
@@ -10,4 +10,4 @@ Since the late 1990s, developers have tried to reduce the time occupied by the i
 	\item \emph{Responding to change} over following a plan.
 \end{enumerate}
 
-\noindent According to the authors, we should interpret these values as follows: ``While there is value in the items on the right, we value the items on the left more'' \cite{beck2001agile}. When we examine these values more closely, we can observe that they all share a common philosophy, which is that software engineering should be a fast process in which communication and a short feedback loop is critical to avoid missteps. Since 2001, a variety of different programming models have arisen, each incorporating these agile principles in their own way. The most remarkable new practice is \acrfull{tdd}. Recall that an integration test is a black-box test and that as such, we can actually construct the test case in advance and write the implementation afterwards. This concept is also prevalent in TDD. This practice depicts that if we want to extend the functionality of the application, we should first modify the test cases (or add new test cases) and then modify the application code until every test case is passing \cite{10.5555/579193}.
+\noindent According to the authors, we should interpret these values as follows: ``While there is value in the items on the right, we value the items on the left more'' \cite{beck2001agile}. When we examine these values more closely, we can observe that they all share a common philosophy, which is that software engineering should be a fast process in which communication and a short feedback loop is critical to avoid missteps. Since 2001, a variety of different programming models have arisen, each incorporating these Agile principles in their own way. The most remarkable new practice is \acrfull{tdd}. Recall that an integration test is a black-box test and that as such, we can actually construct the test case in advance and write the implementation afterwards. This concept is also prevalent in TDD. This practice depicts that if we want to extend the functionality of the application, we should first modify the test cases (or add new test cases) and then modify the application code until every test case is passing \cite{10.5555/579193}.
