--- a/paper/summary/dutch.tex
+++ b/paper/summary/dutch.tex
@@ -7,6 +7,6 @@ In een traditioneel softwareontwikkelingsproces bouwen programmeurs gewoonlijk d
 
 \noindent Softwareontwikkeling vandaag de dag gebeurt razendsnel. Als gevolg van het tempo waaraan ontwikkelaars applicaties uitbreiden, neemt ook het aantal tests superlineair toe. Immers, elke verandering aan de code van de applicatie leidt tot de toevoeging van ten minste één extra test. Dit heeft een negatief effect op de uitvoeringstijd van de tests, waardoor de voordelen van een korte ontwikkelingscyclus tenietgedaan worden.\\
 
-\noindent Dit probleem van schaalbaarheid kan opgelost worden door gebruik te maken van optimalisatietechnieken. Hiertoe stelt deze masterproef drie technieken voor: Test-Minimalisering, -Selectie en -Prioritering. De eerste twee technieken proberen te voorspellen welke tests zullen slagen en voeren deze redundante tests bijgevolg niet uit. De derde techniek voert wel elke test uit, maar bepaalt een ideale uitvoeringsvolgorde zodanig dat tests met een hoge kans op falen eerder worden uitgevoerd.\\
+\noindent Dit probleem van schaalbaarheid kan opgelost worden door gebruik te maken van optimalisatietechnieken. Hiertoe stelt deze masterproef drie technieken voor: Testpakket Minimalisering, Test-Selectie en -Prioritering. De eerste twee technieken proberen te voorspellen welke tests zullen slagen en voeren deze redundante tests bijgevolg niet uit. De derde techniek voert wel elke test uit, maar bepaalt een ideale uitvoeringsvolgorde zodanig dat tests met een hoge kans op falen eerder worden uitgevoerd.\\
 
 \noindent Deze masterproef presenteert een implementatie van deze techniek met een nieuw en drie bestaande prioriteringsalgoritmen. Het effect van deze techniek is geëvalueerd op twee bestaande applicaties. De resultaten zijn veelbelovend. De eerste falende test wordt gemiddeld dertig keer sneller gedetecteerd dan zonder deze techniek.
