--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -31,7 +31,7 @@
 \usepackage{tikz}
 \usepackage{tikzscale}
 \usepackage{titlesec}
-\usepackage{draftwatermark}
+\usepackage[nostamp]{draftwatermark}
 \usepackage{cleveref}
 
 % Tikz libraries.
